# hr_rag_demo

./: api.py  demo_questions  models.py  pyproject.toml  readme.md  streamlit_app.py
Example docs/: Recruitment-Policy.docx
